--- a/.github/workflows/publish_hex.yml
+++ b/.github/workflows/publish_hex.yml
@@ -2,16 +2,31 @@ name: Publish package to Hex 📦
 on:
   push:
     tags:
-      - "*"
-
+      - “v[0-9]+.[0-9]+.[0-9]+”
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out
+      - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Publish package to Hex 📦
-        uses: arkemishub/publish-to-hex@v1.13.4
+      - name: Set up Elixir
+        uses: erlef/setup-beam@v1
+        with:
+          elixir-version: '1.13.4'
+          otp-version: '24.3'
+      - name: Restore dependencies cache
+        uses: actions/cache@v3.3.1
+        with:
+          path: deps
+          key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+          restore-keys: ${{ runner.os }}-mix-
+      - name: Install dependencies
+        run: mix deps.get
+      - name: Compile dependencies
+        run: mix deps.compile
+      - name: Build package
+        run: mix hex.build
+      - name: Release & Publish
+        run: mix hex.publish --yes
         env:
           HEX_API_KEY: ${{ secrets.HEX_API_KEY }}
