--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,32 +7,29 @@ on:
       - 'main'
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  MIX_ENV: test
 
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: node:10.18-jessie
     name: Create Coverage Report
     strategy:
       matrix:
-        otp: [25.0]
-        elixir: [1.14.3]
+        otp: ['25.0.4']
+        elixir: ['1.14.1']
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-elixir@v1
+      - uses: erlef/setup-beam@v1
         with:
           otp-version: ${{matrix.otp}}
           elixir-version: ${{matrix.elixir}}
+      - uses: actions/checkout@v3
       - name: Get dependencies
         run: mix deps.get
-
       - name: Generating XML
         run: mix coveralls.json
         # todo: remove when tests are fixed
         continue-on-error: true
-        env:
-          MIX_ENV: test
       - name: Upload to Codecov
         uses: codecov/codecov-action@v2
         with:
