fix: link_manager add node handling if parameters are not Unit (#35)

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -8,31 +8,46 @@ on:
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: node:10.18-jessie
+    env:
+      MIX_ENV: test
     name: Create Coverage Report
     strategy:
       matrix:
-        otp: [24.0]
-        elixir: [1.13.2]
+        otp: ['25.0.4']
+        elixir: ['1.14.1']
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-elixir@v1
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - uses: erlef/setup-beam@v1
         with:
           otp-version: ${{matrix.otp}}
           elixir-version: ${{matrix.elixir}}
-      - name: Get dependencies
-        run: mix deps.get
 
-      - name: Generating XML
+      - name: Get deps cache
+        uses: actions/cache@v2
+        with:
+          path: deps/
+          key: deps-${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('**/mix.lock') }}
+
+      - name: Get build cache
+        uses: actions/cache@v2
+        with:
+          path: _build/test/
+          key: build-${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('**/mix.lock') }}
+
+      - name: Install Dependencies
+        run: |
+          mix deps.get
+          mix compile
+
+      - name: Run Tests
         run: mix coveralls.json
-        # todo: remove when tests are fixed
         continue-on-error: true
-        env:
-          MIX_ENV: test
+
       - name: Upload to Codecov
         uses: codecov/codecov-action@v2
         with:
