--- a/.github/workflows/publish_hex.yml
+++ b/.github/workflows/publish_hex.yml
@@ -28,6 +28,17 @@ jobs:
         run: mix deps.compile
       - name: Build package
         run: mix hex.build
+      - name: Run Tests
+        run: mix coveralls.json
+        continue-on-error: true
+      - name: Upload to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./cover/excoveralls.json
+          directory: cover
+          fail_ci_if_error: true
+          verbose: true
       - name: Release & Publish
         run: mix hex.publish --yes
         env:
